A resolver todos los TODO: Teniendo en cuenta que se debe: 1.- Completar lo necesario para que compile   a.- completar Strings.xml   b.- Crear menu.xml   c.- crear Interface 2.- Completar constructor ViewHolder 3.- Completar metodos OnCreate y OnBind del Adapter 4.- Menu   a.- Completar opciones del menu "opcion a" y "salir"   b.- Dar funcionalidad a los botones 5.- Usar Intent para llamar por telefono. 6.- Uso de GIT:   a.- Bajar y subir cambios de/a github   b.- realizar al menos 1 commit con la leyenda "entrega 1er Parcial, Alumno: Nombre y Apellido 6- Adaptar codigo usando MVC (mover lo que no debe estar en MainActivity)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,14 +33,14 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Nombre"
+                android:text="Completar con: Nombre"
                 android:id="@+id/main_nombre"
                 android:textSize="20dp"
                 android:textAlignment="center"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text=""
+                android:text="Completar"
                 android:textColor="@color/colorPrimaryDark"
                 android:id="@+id/main_telefono"
                 android:textSize="40dp"
@@ -49,7 +49,7 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Llamar"
+            android:text="Completar con:Llamar"
             android:id="@+id/btn_llamar"/>
 </LinearLayout>
 
